Create my Flutter Developer page on APP

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
    - assets/developers/luke_pighetti/book_reader/
    - assets/developers/groovin_chip/
    - assets/developers/darshan_kawar/
+   - assets/developers/jose_spinardi/
 
   #  - images/a_dot_ham.jpeg
 
